<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     xmlns:tools="http://schemas.android.com/tools"
                                                     android:id="@+id/item_detail_container"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent"
                                                     tools:context="com.pedro.melisearchsampleapp.activity.SearchProductsActivity"
                                                     tools:ignore="MergeRootFrame">



    <androidx.core.widget.NestedScrollView
            android:id="@+id/item_detail_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <ImageView
                        android:id="@+id/image"
                        android:layout_margin="@dimen/text_margin"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin_small"
                        android:layout_width="180dp"
                        android:layout_height="180dp"/>
                <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/text_margin_small"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="?attr/textAppearanceHeadline5"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow_light"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/priceLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/price_lbl"
                        android:layout_marginEnd="@dimen/text_margin_small"
                        android:layout_marginStart="@dimen/text_margin"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="?attr/textAppearanceListItem"/>
                <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/text_margin_small"
                        android:layout_marginStart="@dimen/text_margin_small"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="?attr/textAppearanceListItem"/>
                <TextView
                        android:id="@+id/currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/text_margin_small"
                        android:layout_marginStart="@dimen/text_margin_small"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="?attr/textAppearanceListItem"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/availableCountLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/cantidad_disponible"
                        android:layout_marginEnd="@dimen/text_margin_small"
                        android:layout_marginStart="@dimen/text_margin"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="?attr/textAppearanceListItem"/>
                <TextView
                        android:id="@+id/availableCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/text_margin_small"
                        android:layout_marginStart="@dimen/text_margin_small"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="?attr/textAppearanceListItem"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/conditionLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/condition"
                        android:layout_marginEnd="@dimen/text_margin_small"
                        android:layout_marginStart="@dimen/text_margin"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="?attr/textAppearanceListItem"/>
                <TextView
                        android:id="@+id/condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/text_margin_small"
                        android:layout_marginStart="@dimen/text_margin_small"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="?attr/textAppearanceListItem"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/stopTimeLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/stop_time"
                        android:layout_marginEnd="@dimen/text_margin_small"
                        android:layout_marginStart="@dimen/text_margin"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="?attr/textAppearanceListItem"/>
                <TextView
                        android:id="@+id/stopTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/text_margin_small"
                        android:layout_marginStart="@dimen/text_margin_small"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="?attr/textAppearanceListItem"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/soldCountLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/sold_count"
                        android:layout_marginEnd="@dimen/text_margin_small"
                        android:layout_marginStart="@dimen/text_margin"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="?attr/textAppearanceListItem"/>
                <TextView
                        android:id="@+id/soldCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/text_margin_small"
                        android:layout_marginStart="@dimen/text_margin_small"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="?attr/textAppearanceListItem"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>